# operateMe

./: .env  .env.template  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.nix
attached_assets/: Pasted---1742949556089.txt  Pasted--vite-connecting-DOMException-line-2-column-218742-sourceURL-https-ff7a22a3-b500-4d42-b-1742324214007.txt  Pasted--vite-connecting-vite-connected-Warning-A-component-is-changing-an-uncontrolled-input-to-be--1742177700331.txt  Pasted--web-app--1742092987792.txt  Pasted-Lets-work-on-the-PDF-and-the-text-contract-case-seniors-On-driver-dashabord-If-the-driver-selected-1742950092341.txt  Pasted-Lets-work-on-the-PDF-and-the-text-contract-case-seniors-On-driver-dashabord-If-the-driver-selected-1742950397322.txt  Pasted-To-generate-a-PDF-that-closely-matches-the-design-and-layout-of-the-attached-image-you-can-use-Pyth-1742161938009.txt  Pasted-chunk-RPCDYKBN-js-v-4840e876-21551-Download-the-React-DevTools-for-a-better-development-experience--1742097611214.txt  Pasted-chunk-RPCDYKBN-js-v-bbbdbcb8-21551-Download-the-React-DevTools-for-a-better-development-experience--1742176874818.txt  Pasted-chunk-RPCDYKBN-js-v-bbbdbcb8-21551-Download-the-React-DevTools-for-a-better-development-experience--1742177099711.txt  Pasted-client-536-WebSocket-connection-to-wss-ff7a22a3-b500-4d42-b5a5-28ff0af8d6a5-00-1ojo9vzl3ukrf-rike-1742324978619.txt
client/src/: App.tsx  main.tsx
docs/: troubleshooting.md  vps-deployment.md
scripts/: update-github.sh
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
(+40 files in other folders)
