[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "jinja2>=3.1.6",
    "pillow>=11.1.0",
    "python-bidi>=0.6.6",
    "qrcode>=8.0",
    "reportlab>=4.3.1",
    "weasyprint>=64.1",
]
